--- a/three-toggle/toggle.html
+++ b/three-toggle/toggle.html
@@ -258,9 +258,9 @@ header {
             </div>
             <div class="nav-items">
                 <h6>NAVIGATE THROUGH</h6>
-                <a href="./web.html">Home</a>
-                <a href="./learn-to-code.html">Learn to Code</a>
-                <a href="./challenge.html">Challenge</a>
+                <a href="#">Home</a>
+                <a href="./fast.html">Learn to Code</a>
+                <a href="#">Challenge</a>
                 <a href="#">Contact us</a>
             </div>
         </div>
